- Fixing navigation bar content not showing up on mobile layout

--- a/public/css/soulsbetween.css
+++ b/public/css/soulsbetween.css
@@ -345,6 +345,7 @@ a {
 @media (max-width: 992px) {
   #headerNav {
     border: 0;
+    height: unset;
     padding: 0;
     position: relative;
   }
